==> MikroElektronika/mikrosdk_v2/targets/avr_8bit/mikroe/avr/src/spi_master/implementation_1/hal_ll_spi_master.c <==
#include "hal_ll_spi_master.h"
#include "hal_ll_gpio_port.h"
#include "hal_ll_spi_master_pin_map.h"
#define hal_ll_spi_master_get_module_state_address ((hal_ll_spi_master_handle_register_t *)*handle)
#define hal_ll_spi_master_get_handle (hal_ll_spi_master_handle_register_t *)hal_ll_spi_master_get_module_state_address->hal_ll_spi_master_handle
#define hal_ll_spi_master_get_base_struct(_handle) ((const hal_ll_spi_master_base_handle_t *)_handle)
#define hal_ll_spi_master_get_base_from_hal_handle ((hal_ll_spi_master_hw_specifics_map_t *)((hal_ll_spi_master_handle_register_t *)\
                                                   (((hal_ll_spi_master_handle_register_t *)(handle))->hal_ll_spi_master_handle))->hal_ll_spi_master_handle)->base
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_DIVIDER_2 (2)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_DIVIDER_4 (4)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_DIVIDER_8 (8)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_DIVIDER_16 (16)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_DIVIDER_32 (32)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_DIVIDER_64 (64)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_DIVIDER_128 (128)
#define HAL_LL_SPI_MASTER_CLK_POLARITY (3)
#define HAL_LL_SPI_MASTER_CLK_PHASE (2)
#define HAL_LL_SPI_MASTER_MODE (4)
#define HAL_LL_SPI_MODULE_ENABLE (6)
#define HAL_LL_SPI_MASTER_TRANSFER_COMPLETE_FLAG_BIT (7)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_BIT_0 (0)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_BIT_1 (1)
#define HAL_LL_SPI_MASTER_CLK_BAUD_RATE_BIT_2 (7)

void hal_ll_spi_master_close( handle_t* handle ) {
    // Get low level HAL handle.
    low_level_handle = hal_ll_spi_master_get_handle;

    // Get appropriate hw specifics map.
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);

    if( NULL != low_level_handle->hal_ll_spi_master_handle ) {
        low_level_handle->hal_ll_spi_master_handle  = NULL;
        low_level_handle->hal_drv_spi_master_handle  = NULL;
        low_level_handle->init_ll_state = false;

        hal_ll_spi_master_hw_specifics_map_local->mode = HAL_LL_SPI_MASTER_MODE_DEFAULT;
        hal_ll_spi_master_hw_specifics_map_local->speed = HAL_LL_SPI_MASTER_SPEED_100K;
        hal_ll_spi_master_hw_specifics_map_local->dummy_data = 0;
        hal_ll_spi_master_hw_specifics_map_local->hw_actual_speed = 0;

        hal_ll_spi_master_set_clock( hal_ll_spi_master_hw_specifics_map_local, true );
        hal_ll_spi_master_configure_pins( hal_ll_spi_master_hw_specifics_map_local, false );
        hal_ll_spi_master_set_clock( hal_ll_spi_master_hw_specifics_map_local, false );

        hal_ll_spi_master_hw_specifics_map_local->pins.sck = HAL_LL_PIN_NC;
        hal_ll_spi_master_hw_specifics_map_local->pins.miso = HAL_LL_PIN_NC;
        hal_ll_spi_master_hw_specifics_map_local->pins.mosi = HAL_LL_PIN_NC;
    }
}

static uint8_t hal_ll_spi_master_transfer_bare_metal( hal_ll_spi_master_hw_specifics_map_t *map, uint8_t data_buffer ) {
    const hal_ll_spi_master_base_handle_t *hal_ll_hw_reg = hal_ll_spi_master_get_base_struct( map->base );

    // Write user-defined data ( 'hal_ll_spi_master_read_bare_metal' procedure will send dummy data ).
    write_reg( hal_ll_hw_reg->spi_spdr_reg_addr, data_buffer );

    // Wait until transmission of byte is completed.
    while ( !check_reg_bit( hal_ll_hw_reg->spi_spsr_reg_addr, HAL_LL_SPI_MASTER_TRANSFER_COMPLETE_FLAG_BIT ) );

    // Return read data.
    return read_reg( hal_ll_hw_reg->spi_spdr_reg_addr );
}

static void hal_ll_spi_master_write_bare_metal( hal_ll_spi_master_hw_specifics_map_t *map, uint8_t * __generic_ptr write_data_buffer,
                                                size_t write_data_length ) {
    size_t transfer_counter = 0;
    const hal_ll_spi_master_base_handle_t *hal_ll_hw_reg = hal_ll_spi_master_get_base_struct( map->base );

    // Write the first data to be transmitted into the SPI_DR register.
    for( transfer_counter = 0; transfer_counter < write_data_length; transfer_counter++ ) {
        // If we are good to go ( if the tx buffer value has been shifted to the shift register ), write the data.
        hal_ll_spi_master_transfer_bare_metal( map, write_data_buffer[ transfer_counter ] );
    }
}

static hal_ll_pin_name_t hal_ll_spi_master_check_pins( hal_ll_pin_name_t sck_pin, hal_ll_pin_name_t miso_pin,
                                                       hal_ll_pin_name_t mosi_pin, hal_ll_spi_master_pins_t *index_list,
                                                       hal_ll_spi_master_handle_register_t *handle_map ) {
    static const uint8_t sck_map_size  = ( sizeof( _spi_sck_map ) ) / ( sizeof( hal_ll_spi_master_pin_map_t ) );
    static const uint8_t miso_map_size = ( sizeof( _spi_miso_map ) ) / ( sizeof( hal_ll_spi_master_pin_map_t ) );
    static const uint8_t mosi_map_size = ( sizeof( _spi_mosi_map ) ) / ( sizeof( hal_ll_spi_master_pin_map_t ) );
    uint8_t hal_ll_module_id = 0;
    uint8_t index_counter = 0;
    uint8_t miso_index;
    uint8_t mosi_index;
    uint8_t sck_index;

    if ( ( HAL_LL_PIN_NC == sck_pin ) || ( HAL_LL_PIN_NC == miso_pin ) || ( HAL_LL_PIN_NC == mosi_pin ) ) {
        return HAL_LL_PIN_NC;
    }

    // Check pins from the specific pin maps with the user defined pins.
    for ( sck_index = 0; sck_index < sck_map_size; sck_index++ ) {
        if ( _spi_sck_map[sck_index].pin == sck_pin ) {
            for ( miso_index = 0; miso_index < miso_map_size; miso_index++ ) {
                if ( _spi_miso_map[miso_index].pin == miso_pin ) {
                    if ( _spi_sck_map[sck_index].module_index ==_spi_miso_map[miso_index].module_index ) {
                        for ( mosi_index = 0; mosi_index < mosi_map_size; mosi_index++ ) {
                            if ( _spi_mosi_map[mosi_index ].pin ==  mosi_pin ) {
                                if ( _spi_sck_map[sck_index].module_index ==_spi_mosi_map[mosi_index].module_index ) {
                                    // Get module number
                                    hal_ll_module_id = _spi_sck_map[ sck_index ].module_index;

                                    // Map pin names
                                    index_list[ hal_ll_module_id ]->sck = sck_index;
                                    index_list[ hal_ll_module_id ]->miso = miso_index;
                                    index_list[ hal_ll_module_id ]->mosi = mosi_index;
                                    index_list[ hal_ll_module_id ]->ss = sck_index;

                                    // Check if module is taken
                                    if ( NULL == handle_map[hal_ll_module_id]->hal_drv_spi_master_handle ) {
                                        return hal_ll_module_id;
                                    } else if ( SPI_MODULE_COUNT == ++index_counter ) {
                                        return --index_counter;
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }

    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void hal_ll_spi_master_map_pins( uint8_t module_index, hal_ll_spi_master_pins_t *index_list ) {
    hal_ll_spi_master_hw_specifics_map[ module_index ].pins.sck  = _spi_sck_map[ index_list[ module_index ]->sck ].pin;
    hal_ll_spi_master_hw_specifics_map[ module_index ].pins.miso = _spi_miso_map[ index_list[ module_index ]->miso ].pin;
    hal_ll_spi_master_hw_specifics_map[ module_index ].pins.mosi = _spi_mosi_map[ index_list[ module_index ]->mosi ].pin;
    #if defined (__hal_ll_spi_master_subset_atmega__)
    hal_ll_spi_master_hw_specifics_map[ module_index ].pins.ss = _spi_ss_map[ index_list[ module_index ]->ss ].pin;
    #endif
}

static void hal_ll_spi_master_hw_init( hal_ll_spi_master_hw_specifics_map_t *map ) {
    // Get hardware register list for user-defined SPI pins.
    const hal_ll_spi_master_base_handle_t *hal_ll_hw_reg = hal_ll_spi_master_get_base_struct( map->base );

    /* Clear SPI Control register:
     * - disable SPI interrupt;
     * - disable SPI module;
     * - set MSB to be transmitted first;
     * - set SPI Slave mode;
     * - set SPI mode 0;
     * - set SPI baud rate to be fosc/4.
    */
    clear_reg( hal_ll_hw_reg->spi_spcr_reg_addr );

    // Set SPI master mode.
    set_reg_bit( hal_ll_hw_reg->spi_spcr_reg_addr, HAL_LL_SPI_MASTER_MODE );

    /* Set Clock Polarity.
     * Choose whether idle state for the clock is high level (1) or low level (0).
     */
    if ( HAL_LL_SPI_MASTER_MODE_1 >= map->mode ) {
        clear_reg_bit( hal_ll_hw_reg->spi_spcr_reg_addr, HAL_LL_SPI_MASTER_CLK_POLARITY );
    } else {
        set_reg_bit( hal_ll_hw_reg->spi_spcr_reg_addr, HAL_LL_SPI_MASTER_CLK_POLARITY );
    }

    /* Set Clock Phase.
     * Choose whether transmit occurs on the transition from ACTIVE to IDLE ( 1 ), or vice versa ( 0 ).
     */
    if ( HAL_LL_SPI_MASTER_MODE_0 == map->mode || HAL_LL_SPI_MASTER_MODE_2 == map->mode ) {
        clear_reg_bit( hal_ll_hw_reg->spi_spcr_reg_addr, HAL_LL_SPI_MASTER_CLK_PHASE );
    } else {
        set_reg_bit( hal_ll_hw_reg->spi_spcr_reg_addr, HAL_LL_SPI_MASTER_CLK_PHASE );
    }

    // Configure SPI speed.
    hal_ll_spi_master_set_baud_rate( map );

    // Enable SPI module.
    set_reg_bit( hal_ll_hw_reg->spi_spcr_reg_addr, HAL_LL_SPI_MODULE_ENABLE );
}

static void hal_ll_spi_master_init( hal_ll_spi_master_hw_specifics_map_t *map ) {
    // Enable specific clock module.
    hal_ll_spi_master_set_clock ( map, true );

    // Configure pins which are going to be used for SPI communication.
    hal_ll_spi_master_configure_pins( map, true );

    // Finally, write user-defined settings into hardware registers.
    hal_ll_spi_master_hw_init( map );
}
